--- a/src/pages/pageOne/pageOne.html
+++ b/src/pages/pageOne/pageOne.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>homePage</h1>
+    <div style="width: 400px;height: 300px;">
+        <img src="./assets/images/HTML5.png" alt="">
+    </div>
+    <div>
+        <img src="./assets//images/风电.png" alt="">
+    </div>
 </body>
 </html>
